ci-cd/k8s/rbac/rbac-netpol.yaml
# Deny all ingress/egress by default; allow only what's needed
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ecommerce-api-netpol
  namespace: ecommerce-production
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ecommerce-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
   - from:
     - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
       podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
     ports:
        - port: 3001
  egress:
  # DNS (UDP + TCP)
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
    ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP

  # PostgreSQL (target specific pod)
  - to:
      - podSelector:
          matchLabels:
            app: postgres
    ports:
      - port: 5432
